module CardTerminals
  class RMI
    #
    # Null class for unknown and unsupported card_terminals
    #
    class Null < Base
    end
  end
end

